tests/snapshots/test__help_dialog-2.snap
---
source: tests/test.rs
expression: "app.press('\\x1b')"
---
0000OCTAGON00000                                                                
      0000                                                                      
    00    00                                                                    
  00        00                                                                  
00            00                                                                
00            00                                                                
  00        00                                                                  
    00    00                                                                    
      0000
