tests/snapshots/test__key_color_change-2.snap
---
source: tests/test.rs
expression: "app.press('c')"
---
2222OCTAGON22222                                                                
      2222                                                                      
    22    22                                                                    
  22        22                                                                  
22            22                                                                
22            22                                                                
  22        22                                                                  
    22    22                                                                    
      2222
