tests/snapshots/test__key_color_change.snap
---
source: tests/test.rs
expression: "app.press('c')"
---
1111OCTAGON11111                                                                
      1111                                                                      
    11    11                                                                    
  11        11                                                                  
11            11                                                                
11            11                                                                
  11        11                                                                  
    11    11                                                                    
      1111
