tests/snapshots/test__key_move_navigation-3.snap
---
source: tests/test.rs
expression: "app.press('h')"
---
                                                                                
0000OCTAGON00000                                                                
      0000                                                                      
    00    00                                                                    
  00        00                                                                  
00            00                                                                
00            00                                                                
  00        00                                                                  
    00    00                                                                    
      0000
