tests/snapshots/test__key_next_pattern-2.snap
---
source: tests/test.rs
expression: "app.press('n')"
---
0000TWIN-GLIDER00000                                                            
    00                                                                          
00  00                                                                          
  0000      0000                                                                
          00  00                                                                
              00
