tests/snapshots/test__key_next_pattern.snap
---
source: tests/test.rs
expression: "app.press('n')"
---
000000000GLIDER000000000                                                        
    00                                                                          
00  00                                                                          
  0000
