tests/snapshots/test__key_size_zoom-2.snap
---
source: tests/test.rs
expression: "app.press('-')"
---
0000OCTAGON00000                                                                
      0000                                                                      
    00    00                                                                    
  00        00                                                                  
00            00                                                                
00            00                                                                
  00        00                                                                  
    00    00                                                                    
      0000
