tests/snapshots/test__key_size_zoom.snap
---
source: tests/test.rs
expression: "app.press('+')"
---
000000000000OCTAGON0000000000000                                                
            00000000                                                            
            00000000                                                            
        0000        0000                                                        
        0000        0000                                                        
    0000                0000                                                    
    0000                0000                                                    
0000                        0000                                                
0000                        0000                                                
0000                        0000                                                
0000                        0000                                                
    0000                0000                                                    
    0000                0000                                                    
        0000        0000                                                        
        0000        0000                                                        
            00000000                                                            
            00000000
